tests/grammar/ansi-92/joins.test
# CROSS JOIN missing required JOIN symbol
>SELECT * FROM t1 CROSS t2
Syntax error.
Expected to find JOIN but found identifier[t2]
SELECT * FROM t1 CROSS t2
                      ^^^
# CROSS JOIN two normal tables
>SELECT * FROM t1 CROSS JOIN t2
statements[0]:
  <statement: SELECT
   selected columns:
     0: *
   referenced tables:
     0: cross-join[t1,t2]>
# INNER JOIN two normal tables WITHOUT the INNER symbol
>SELECT * FROM t1 JOIN t2 ON t1.id = t2.t1_id
statements[0]:
  <statement: SELECT
   selected columns:
     0: *
   referenced tables:
     0: inner-join[t1,t2,column-reference[t1.id] = column-reference[t2.t1_id]]>
# INNER JOIN two normal tables WITH the INNER symbol
>SELECT * FROM t1 INNER JOIN t2 ON t1.id = t2.t1_id
statements[0]:
  <statement: SELECT
   selected columns:
     0: *
   referenced tables:
     0: inner-join[t1,t2,column-reference[t1.id] = column-reference[t2.t1_id]]>
# INNER JOIN two normal tables with no join condition
>SELECT * FROM t1 JOIN t2
statements[0]:
  <statement: SELECT
   selected columns:
     0: *
   referenced tables:
     0: inner-join[t1,t2]>
# LEFT JOIN two normal tables WITHOUT the optional OUTER symbol
>SELECT * FROM t1 LEFT JOIN t2 ON t1.id = t2.t1_id
statements[0]:
  <statement: SELECT
   selected columns:
     0: *
   referenced tables:
     0: left-join[t1,t2,column-reference[t1.id] = column-reference[t2.t1_id]]>
# LEFT JOIN two normal tables WITH the optional OUTER symbol
>SELECT * FROM t1 LEFT OUTER JOIN t2 ON t1.id = t2.t1_id
statements[0]:
  <statement: SELECT
   selected columns:
     0: *
   referenced tables:
     0: left-join[t1,t2,column-reference[t1.id] = column-reference[t2.t1_id]]>
# RIGHT JOIN two normal tables WITHOUT the optional OUTER symbol
>SELECT * FROM t1 RIGHT JOIN t2 ON t1.id = t2.t1_id
statements[0]:
  <statement: SELECT
   selected columns:
     0: *
   referenced tables:
     0: right-join[t1,t2,column-reference[t1.id] = column-reference[t2.t1_id]]>
# RIGHT JOIN two normal tables WITH the optional OUTER symbol
>SELECT * FROM t1 RIGHT OUTER JOIN t2 ON t1.id = t2.t1_id
statements[0]:
  <statement: SELECT
   selected columns:
     0: *
   referenced tables:
     0: right-join[t1,t2,column-reference[t1.id] = column-reference[t2.t1_id]]>
# FULL OUTER JOIN two normal tables WITHOUT the optional OUTER symbol
>SELECT * FROM t1 FULL JOIN t2 ON t1.id = t2.t1_id
statements[0]:
  <statement: SELECT
   selected columns:
     0: *
   referenced tables:
     0: full-join[t1,t2,column-reference[t1.id] = column-reference[t2.t1_id]]>
# FULL OUTER JOIN two normal tables WITH the optional OUTER symbol
>SELECT * FROM t1 FULL OUTER JOIN t2 ON t1.id = t2.t1_id
statements[0]:
  <statement: SELECT
   selected columns:
     0: *
   referenced tables:
     0: full-join[t1,t2,column-reference[t1.id] = column-reference[t2.t1_id]]>
# JOIN with USING clause
>SELECT * FROM t1 JOIN t2 USING (id)
statements[0]:
  <statement: SELECT
   selected columns:
     0: *
   referenced tables:
     0: inner-join[t1,t2,using[id]]>
# NATURAL JOIN
>SELECT * FROM t1 NATURAL JOIN t2
statements[0]:
  <statement: SELECT
   selected columns:
     0: *
   referenced tables:
     0: natural-join[t1,t2]>
# UNION JOIN of two tables
>SELECT * FROM t1 UNION JOIN t2
statements[0]:
  <statement: SELECT
   selected columns:
     0: *
   referenced tables:
     0: union-join[t1,t2]>
